S302T400-660 #time 35m Fixed the URL page number and shaky dropdown due to scrollbar disappearing and reappearing (due to a global CSS tag for the footer). ?fix ?pair[grb96, hek21]

--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -104,7 +104,7 @@ input[type="file"] {
 
 /* Fix Footer */
 #main{
-  min-height: calc(100vh - 72px); /* 100px is the height of Footer */
+  min-height: calc(100vh - 71px); /* 100px is the height of Footer */
 }
 
 Footer{
